# data_engineering

./: .gitignore  Docker-compose.yml  Makefile  pyproject.toml
.github/: CODEOWNERS
dags/: main.py
dags/extract_functions/: extract_gsheets.py
tests/dags/: test_extract_gsheets.py  test_main.py
