[tool.poetry]
name = "polars-pipeline"
version = "0.1.0"
description = ""
authors = ["ludsonfelipe <felipe_ludson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
polars = "^0.20.31"
requests = "^2.32.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
